@@ -1,4 +1,5 @@
 v0.11
+	* FIX : Style definitions can now use *,? and [abc]
 	* ADD : Open/Import multiple files
 	* ADD : draw scale
 	* FIX : upload order when merging nodes
